--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
         <h1>Login</h1>
         <input type="email" id="email" placeholder="Enter your Email">
         <input type="password" id="password" placeholder="Enter your Password">
-        <button id="signup">Login</button>
+        <button id="login">Login</button>
 
         <p>Don't have an account? <a href="./index.html">SignUp</a></p>
         <button id="google-btn">
