--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <p>Already have an account? <a href="./login.html">Login</a></p>
         <button id="google-btn">
-        <img src="./images/google (1).png" alt="" id="google-icon">
+        <img src="./images/google.png" alt="" id="google-icon">
                 Continue with Google
         </button>
 
