--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
 
         <p>Don't have an account? <a href="./index.html">SignUp</a></p>
         <button id="google-btn">
-        <img src="./images/google (1).png" alt="" id="google-icon">
+        <img src="./images/google.png" alt="" id="google-icon">
                 Continue with Google
         </button>
 
