--- a/user.html
+++ b/user.html
@@ -7,7 +7,7 @@
   <title>UserName Page</title>
 </head>
 <body>
-  <div id="container">
+  <div id="user-container">
     <h1>Enter Your UserName</h1>
     <input type="text" id="username" placeholder="Enter UserName">
     <button id="user-btn">Continue</button>
