--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Chattrix App</title>
   <link rel="stylesheet" href="index.css" />
-</head>
+  </head>
 <body>
   <div class="wrapper">
     <!-- Left Image / Animation -->
@@ -36,6 +36,8 @@
       </div>
     </div>
   </div>
-  <script type="module" src="./app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script type="module" src="app.js"></script>
+
 </body>
 </html>
