--- a/login.html
+++ b/login.html
@@ -32,6 +32,7 @@
       </div>
     </div>
   </div>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script type="module" src="./app.js"></script>
 </body>
 </html>
