change theme and styling

--- a/chat.html
+++ b/chat.html
@@ -17,8 +17,8 @@
       </div>
       <div class="header-buttons">
         <button id="themeToggle">🌙</button>
-        <button id="wallpaperSelect">🖼️ Change Wallpaper</button>
-        <button id="logout"><img src="./images/logout-Icon.png" alt="" srcset=""></button>
+        <button id="wallpaperSelect"><img src="./images/gallery.png" alt="gallery-icon"></button>
+        <button id="logout"><img src="./images/logout-Icon.png" alt="logout-Icon" srcset=""></button>
         <input type="file" id="wallpaperInput" accept="image/*" style="display: none;" />
       </div>
     </div>
@@ -41,10 +41,11 @@
     <div class="input-area">
       <button id="emojiBtn">😊</button>
       <input type="text" id="message" placeholder="Type a message..." />
-      <button id="sendBtn">Send</button>
+      <button id="sendBtn"><img src="./images/send.png" alt="sent-button" ></button>
     </div>
   </div>
-
+  
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script type="module" src="app.js"></script>
 </body>
 </html>
