--- a/user.html
+++ b/user.html
@@ -14,6 +14,7 @@
     <button id="logout">LogOut</button>
     <p>This name will appear to others in the chat.</p>
   </div>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script type="module" src="./app.js"></script>
 </body>
 </html>
