--- a/login.html
+++ b/login.html
@@ -3,16 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SignUp | Sammi Codder</title>
+  <title>Login Page</title>
   <link rel="stylesheet" href="index.css" />
 </head>
 <body>
   <div class="wrapper">
-    <!-- Left Image / Animation -->
-    <!-- <div class="left-side">
-      <div class="overlay"></div>
-      <img src="./images/chat-img.png" alt="chat-img" class="chat-img">
-    </div> -->
 
     <!-- Right Side Form -->
     <div class="right-side">
